--- a/blog.html
+++ b/blog.html
@@ -12,17 +12,16 @@
     <nav>
         <div class="logo"><a href="#">RookieLjr</a></div>
         <ul class="active">
-            <li><a href="#">首页</a></li>
-            <li><a href="#">相册</a></li>
+            <li><a href="blog.html">首页</a></li>
+            <li><a href="article.html">文章模板</a></li>
             <li><a href="#">个人中心</a></li>
-            <li><a href="#">文章</a></li>
+            <li id="sidebar_trigger"><a href="#">侧滑菜单</a></li>
         </ul>
     </nav>
     <div id="banner">
         <div class="inner">
             <div class="hr"></div>
             <h1>RookieLjr</h1>
-
             <div class="hr"></div>
             <p class="sub-heading">https://github.com/ljrRookie
                 WeChat:15622732935</p>
@@ -165,5 +164,19 @@
 </footer>
 <!-- 页脚结束 -->
 </div>
+<div class="mask"></div>
+<div id="sidebar">
+    <ul>
+        <li><a href="#"> 文章</a></li>
+        <li><a href="#"> Github</a></li>
+        <li><a href="#"> 游戏</a></li>
+        <li><a href="#"> 留言板</a></li>
+        <li><a href="#"> 个人资料</a></li>
+
+    </ul>
+</div>
+<button class="back-to-top">返回顶部</button>
+<script src="js/jquery.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
